# cargo-chat

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  resources.md
docs/: proposals.md
src/: agent_tools.rs  ann.rs  chunker.rs  embedding.rs  hyde.rs  language.rs  llm.rs  main.rs  openai.rs  repo.rs  rerank.rs
