[package]
name    = "rag_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
walkdir         = "2"
rayon           = "1.8"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
random = "0.14"
tokenizers      = "0.19"
code-splitter   = "0.1.5"
tree-sitter-rust= "0.21"
embed_anything = { version = "0.5.5",features = ["ort"] }
bincode = "2.0.1"
tokio = { version = "1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
ignore = "0.4.23"
reqwest = { version = "0.12.15", features = ["json"] }
vector = { git = "https://github.com/timpratim/vector", branch = "serde_serialization", features = ["serde"] }
