[package]
name    = "cargo_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow          = "1"
clap            = { version = "4", features = ["derive"] }
walkdir         = "2"
rayon           = "1.8"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
# random = "0.14" # Consider if this is still needed or if a newer version/alternative is better
tokenizers      = "0.19"
code-splitter   =  { git = "https://github.com/timpratim/code-splitter", branch = "main" }
tree-sitter = "0.25"
tree-sitter-go = "0.23"
tree-sitter-md = "0.2"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
embed_anything = { version = "0.6.4",features = ["ort","metal"] }
bincode = "2.0.1" # Consider if version 2.0.0-rc.3 is what you intend or if a stable 1.x is preferred.
tokio = { version = "1", features = ["full"] }
log = "0.4.27" # Check if this version is current
# env_logger = "0.11.8" # tracing-subscriber is often preferred with tracing
ignore = "0.4.23" # Check if this version is current
reqwest = { version = "0.12.15", features = ["json", "stream"] } # Added stream feature
vector = { git = "https://github.com/timpratim/vector", branch = "serde_serialization", features = ["serde"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rustyline = { version = "15.0.0", features = [] } # Default features, add "with-file-history" below if needed via crate feature
indicatif = { version = "0.17.7", features = ["rayon"] }
futures         = "0.3"
futures-util    = { version = "0.3", features = ["io"] }
async-stream    = "0.3"
dotenvy         = "0.15"
async-trait     = "0.1"

[features]
default = []
with-file-history = ["rustyline/with-file-history"]